fix: align collection card design to mockup

--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -304,6 +304,10 @@
   margin-top: 0;
   margin-bottom: 0;
 }
+.card__heading > a {
+  display: flex;
+  align-items: center;
+}
 
 .card__heading:last-child {
   margin-bottom: 0;
